<resources>
    <string name="app_name">Photo Flashcards</string>
    <string name="title_create_quiz">Photo Quiz</string>
    <string name="title_train">Training</string>
    <string name="title_list">All Cards</string>
    <string name="card_image">Flashcard image</string>
    <string name="no_connection">No internet connection detected</string>
    <string name="delete_card">Delete card</string>
    <string name="cancel">Cancel</string>
    <string name="image_error">Could not create a quiz from this image</string>
    <string name="preference_file_key">de.lmu.personalflashcards.PREFERENCES</string>
    <string name="correct">%1$d correct</string>
    <string name="incorrect">%1$d incorrect</string>
    <string name="status_separator"> / </string>
    <string name="training_done">You are done with your training round! You finished all %2$d questions in %1$d attempts.</string>
    <string name="training_done_title">Training done</string>
    <string name="ok">OK</string>
    <string name="delete_confirmation">Do you really want to delete this card? This action cannot be undone</string>
    <string name="delete_card_title">Delete card?</string>
    <string name="delete">Delete</string>
    <string name="next_quiz">Next</string>
    <string name="quiz_success">Great!</string>
    <string name="quiz_error">That was not quite right. Try again</string>
    <string name="service_description">Sending notifications to remind you to start study sessions</string>
    <string name="reminder_text">Add new cards or start a training session to keep learning German</string>
    <string name="reminder_title">It\'s time to practice</string>
    <string name="days_since_training">Last training round: %1$s</string>
    <string name="cards_reviewed_per_day">Cards reviewed this week: %1$d</string>
    <string name="attempts_per_card">Average number of attempts per card: %1$s</string>
    <string name="number_of_cards_added">Number of cards you have added: %1$d</string>
    <string name="title_show_statistics">Statistics</string>
    <string name="start">Start</string>
    <string name="start_training">Ready to start a training round?</string>
    <string name="title_onboarding">Welcome</string>
    <string name="done">Done</string>
    <string name="difficult_check">This was difficult</string>
    <string name="add_photo">New Photo</string>
    <string name="could_not_initialise">User could not be initialised. Please try again later.</string>
    <string name="participantId">Participant ID %s</string>
    <string name="addCardsHint">Hint: add cards by clicking the + button in "All Cards"</string>
</resources>
