<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/statCounter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/image_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/correctCountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_separator" />

        <TextView
            android:id="@+id/incorrectCountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/trainNext"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/next_quiz"
        android:textColor="@android:color/white"
        android:paddingStart="@dimen/grid_padding"
        android:paddingEnd="@dimen/grid_padding"
        android:layout_marginBottom="@dimen/image_margin"
        android:layout_marginEnd="@dimen/image_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/quizCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statCounter"
        app:layout_constraintBottom_toTopOf="@id/trainNext"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_marginStart="@dimen/card_margin"
        android:layout_marginEnd="@dimen/card_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/trainImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/image_margin"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/trainQuizContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/trainImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/card_margin">

                <TextView
                    android:id="@+id/trainFirstPart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorQuizText"
                    android:textSize="@dimen/quiz_font_size" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/trainOptionsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/option_padding"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/trainOptionChip1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textAlignment="center" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/trainOptionChip2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textAlignment="center" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/trainOptionChip3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textAlignment="center" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/trainOptionChip4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textAlignment="center" />
                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/trainLastPart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorQuizText"
                    android:textSize="@dimen/quiz_font_size" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/trainSuccessIndicator"
        android:visibility="gone"
        android:text="@string/quiz_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorRightAnswer"
        android:textSize="@dimen/quiz_font_size"
        android:layout_marginTop="@dimen/card_margin"
        app:layout_constraintTop_toBottomOf="@id/quizCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/trainErrorIndicator"
        android:visibility="gone"
        android:text="@string/quiz_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorWrongAnswer"
        android:textSize="@dimen/quiz_font_size"
        android:layout_marginTop="@dimen/card_margin"
        app:layout_constraintTop_toBottomOf="@id/quizCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/difficultCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/image_margin"
        android:layout_marginBottom="@dimen/image_margin"
        android:text="@string/difficult_check" />

</androidx.constraintlayout.widget.ConstraintLayout>